# PROTRIDER

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py  test_plotting_api.py
.github/workflows/: publish.yml  tests.yml
outrider-prot/: datasets.py  model.py  model_helper.py  stats.py
outrider_prot/: main.py  model.py  model_helper.py
protrider/: datasets.py  main.py  model.py  model_helper.py  plots.py  stats.py  utils.py
sample_data/: protrider_sample_dataset.tsv  sample_annotations.tsv
src/protrider/: __init__.py  cli.py  config.py  main.py  model.py  model_helper.py  pipeline.py  plots.py  stats.py  utils.py
src/protrider/datasets/: __init__.py  covariates.py  cv.py  datasets.py  protein_intensities.py
src/protrider/model/: __init__.py  model.py  model_helper.py
tests/: README.md  conftest.py  test_config.py  test_covariates.py  test_dataset.py  test_model_save_load.py  test_pipeline.py  test_pipeline_config.py  test_pipeline_cv.py  test_pipeline_features.py  test_pipeline_misc.py  test_pipeline_standard.py
